--- a/meir-insurance/src/styles/Header.css
+++ b/meir-insurance/src/styles/Header.css
@@ -1,84 +1,73 @@
-/* NavigationBar.css */
-.navbar {
-  background-color: rgba(133, 207, 235, 0.8); /* Example background color */
-  color: black; /* Example text color */
-  padding: 10px 0; /* Example padding */
-}
+/* Header.css */
 
-.container {
+.navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
+  background-color: #6496c8;
+  color: black;
+  padding: 0.5rem;
 }
 
-.navbar-left {
+.navbar-logo {
   display: flex;
   align-items: center;
-}
-
-.logo-link {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  color: inherit;
-  margin-left: 2%;
 }
 
 .logo-icon {
-  width: 5%;
-  color: white;
-  fill: #fff; /* Example icon color */
+  width: 3rem;
+  margin-right: 1rem;
 }
 
-.logo-text {
-  font-size: 2rem; /* Example font size */
-  font-family: "Franklin Gothic Medium";
+.business-name {
+  font-size: 2rem;
   font-weight: bold;
 }
 
-.navbar-right {
-  display: flex;
-  align-items: center;
-}
-
-.nav-links {
+.navbar-nav ul {
   list-style-type: none;
-  display: flex;
   margin: 0;
   padding: 0;
-}
-
-.nav-link {
-  text-decoration: none;
-  color: inherit;
-  font-size: 1.1rem; /* Example font size */
-}
-
-.search-bar {
   display: flex;
-  align-items: center;
-  margin-left: 20px; /* Example margin between navigation links and search bar */
+  margin-left: 1rem;
 }
 
-.search-input {
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  margin-right: 8px; /* Example margin between input and button */
+.navbar-nav li {
+  font-size: 1.3rem;
+  margin-right: 1.5rem;
 }
 
-.search-button {
-  padding: 8px 16px;
-  background-color: #007bff; /* Example button background color */
-  color: #fff; /* Example button text color */
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+.navbar-nav a {
+  text-decoration: none;
+  color: black;
+  transition: color 0.3s ease;
 }
 
-.search-button:hover {
-  background-color: #0056b3; /* Example hover background color */
+.navbar-nav a:hover {
+  color: white; /* Change color on hover */
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 1rem;
+  }
+
+  .navbar-logo {
+    margin-bottom: 1rem;
+  }
+
+  .navbar-nav {
+    margin-top: 1rem;
+  }
+
+  .navbar-nav ul {
+    flex-direction: column;
+  }
+
+  .navbar-nav li {
+    margin-right: 0;
+    margin-bottom: 1rem;
+  }
 }
