--- a/meir-insurance/src/styles/Header.css
+++ b/meir-insurance/src/styles/Header.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #6496c8;
+  background-color: #96bce3;
   color: black;
   padding: 0.5rem;
 }
